done nf backend

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,9 @@ NFC_WRITE_TIMEOUT=10
 # 3. Consider changing default usernames and passwords in app/core/security.py
 # 4. Use HTTPS in production
 # 5. Configure CORS properly for your frontend domain
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin123
+STAFF_USERNAME=frontdesk
+STAFF_PASSWORD=frontdesk123
+FERNET_KEY=On-W6q0cItIMNGh_MnhngZ2EosUEa3EAy8osW6jGAhM=
+
