--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ python-multipart==0.0.6
 pydantic==2.5.0
 pydantic-settings==2.1.0
 nfcpy==1.0.4
-ndef==0.3.3
+ndef==0.2
 python-dotenv==1.0.0
 requests==2.31.0
 sqlalchemy==2.0.23
+email-validator>=2.0.0
