email sending system added.

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,5 @@ STAFF_USERNAME=frontdesk
 STAFF_PASSWORD=frontdesk123
 FERNET_KEY=On-W6q0cItIMNGh_MnhngZ2EosUEa3EAy8osW6jGAhM=
 
+GMAIL_APP_PASSWORD=trxg puvx hmxi viuz
+
