--- a/requirements-ubuntu.txt
+++ b/requirements-ubuntu.txt
@@ -1,4 +1,4 @@
-# Requirements for Ubuntu Server (Python 3.11-3.13 compatible)
+# Requirements for Ubuntu Server (Python 3.11 - No Rust needed)
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
@@ -7,13 +7,11 @@ passlib[bcrypt]==1.7.4
 sqlalchemy==2.0.23
 python-dotenv==1.0.0
 
-# Use Pydantic 1.x (no Rust required, works with Python 3.13)
+# Use Pydantic 1.x (no Rust compilation required)
 pydantic==1.10.13
 
 # Other dependencies
 starlette==0.27.0
 httpx==0.25.0
 email-validator==2.1.0
-
-# For Python 3.13 compatibility
-typing-extensions>=4.8.0
+typing-extensions==4.8.0
