feat: Add Apple Wallet pass integration for NFC access
- Implemented API endpoints for signing and managing Apple Wallet passes.
- Created certificate setup instructions and conversion scripts for .p12 files.
- Added debugging scripts for .pkpass file validation.
- Developed Flutter integration examples for generating and using passes.
- Included security notes and troubleshooting guidelines for certificate management.
- Established a structured directory for static assets and certificates.

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,13 @@ dmypy.json
 Thumbs.db
 ehthumbs.db
 Desktop.ini
+
+# Apple certificates and private keys (NEVER COMMIT THESE!)
+certs/*.pem
+certs/*.p12
+certs/*.cer
+certs/*.key
+certs/*.crt
+
+# Generated pass files
+*.pkpass
